[package]
name = "countdown"
version = "0.1.0"
authors = ["elpnt <quantumular@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.19"
tui = { version = "0.15", features = ["crossterm"] }
