[package]
name = "cdown"
version = "0.1.0"
description = "Simple TUI timer app purely written in Rust"
homepage = "https://github.com/elpnt/cdown"
repository = "https://github.com/elpnt/cdown"
categories = ["tui", "terminal", "timer"]
authors = ["elpnt <quantumular@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
humantime = "2.1"
structopt = "0.3"
crossterm = "0.19"
tui = { version="0.15", default-features=false, features=["crossterm"] }
